# ntcore-sys

./: .gitignore  Cargo.toml  LISCENSE  build.rs  ntcore_c.h
