[package]
name = "ntcore-sys"
version = "0.1.0"
authors = ["XavilPergis <max.duzen@gmail.com>"]
description = "Raw bindings to WPI's ntcore"
repository = "https://github.com/XavilPergis/ntcore-sys"
categories = ["api-bindings", "external-ffi-bindings"]

build = "build.rs"
exclude = ["lib/**"]

[build-dependencies]
bindgen = "0.33"